# phoenix-ai-trading

./: .gitignore
phoenix-backend/: .env.example  README.md  database_emergency_fix.sql  database_schema_complete.sql  database_schema_complete_final.sql  database_schema_fix.sql  database_schema_safe.sql  disable_rls_fix.sql  jest.config.js  package-lock.json  package.json  tsconfig.json
phoenix-backend/src/: app.ts  index.ts
phoenix-backend/src/config/: database.ts  env.ts  grpc.ts  ipc.ts  logger.ts  redis.ts
phoenix-backend/src/lib/ai/: ensemble.ts  features.ts
phoenix-backend/src/lib/strategies/: storage.ts
phoenix-backend/src/lib/types/: database.ts
phoenix-backend/src/middleware/: auth.middleware.ts  errorHandler.ts  rateLimiter.ts  validator.ts
phoenix-backend/src/modules/admin/: admin.controller.ts  admin.routes.ts  admin.schemas.ts
phoenix-backend/src/modules/auth/: auth.controller.ts  auth.routes.ts  auth.schemas.ts  auth.service.ts
phoenix-backend/src/modules/portfolio/: portfolio.controller.ts  portfolio.routes.ts  portfolio.schemas.ts
phoenix-backend/src/modules/trading/: trading.controller.ts  trading.routes.ts  trading.schemas.ts  trading.service.ts  trading.ws.ts
phoenix-backend/src/modules/users/: users.controller.ts  users.routes.ts  users.schemas.ts
phoenix-backend/src/routes/: strategies.ts
phoenix-backend/src/routes/ai/: features.ts  predict.ts
phoenix-backend/src/types/: database.ts  express.d.ts  global.d.ts
phoenix-backend/src/utils/: encryption.ts  envValidation.ts  jwt.ts  logger.ts
phoenix-backend/supabase/migrations/: 001_initial_schema.sql
phoenix-backend/tests/: basic.test.ts  integration.test.ts  setup.ts
phoenix-engine/: CMakeLists.txt  COMPLETE_ERROR_TEST_RESULTS.md  COMPLETE_IMPLEMENTATION_GUIDE.md  DEPLOYMENT.md  ERROR_FIXES_SUMMARY.md  FINAL_ERROR_REPORT.md  IPC_STATUS.md  README.md  README_IPC.md  STRATEGY_ABSORPTION_DEPLOYMENT.md  market_data.csv  system_config.sql
phoenix-engine/benchmarks/: benchmark_main.cpp
phoenix-engine/functions/genetic-evolver/: index.ts
phoenix-engine/functions/historical-data-fetcher/: index.ts
phoenix-engine/functions/live-trader/: deno.json
phoenix-engine/functions/model-trainer/: index.ts
phoenix-engine/functions/strategy-absorber/: deno.json  index.ts
phoenix-engine/include/: engine.h
phoenix-engine/include/core/: engine_stats.h  market_data.h  order.h  portfolio.h  risk_manager.h  types.h
phoenix-engine/include/execution/: gateway.h  simulated_gateway.h
phoenix-engine/include/feeds/: feed_handler.h  simulated_feed.h
phoenix-engine/include/indicators/: indicator.h  rsi.h
phoenix-engine/include/ipc/: client_session.h  ipc_manager.h  json_message.h  message_types.h  tcp_server.h
phoenix-engine/include/utils/: cache_aligned.h  concurrent_queue.h  logging.h  memory_pool.h
phoenix-engine/lib/genetic/: algorithm.ts
phoenix-engine/python/: CMakeLists.txt  Dockerfile  README.md  README_IPC.md  historical_data_fetcher.py  main.py  phoenix_engine.pyd  render.yaml  requirements.txt  setup.py  test_basic.py  train.py
phoenix-engine/python/benchmarks/: bench_ipc.py  bench_overhead.py
phoenix-engine/python/phoenix_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phoenix-engine/python/phoenix_ipc/: __init__.py  client.py  messages.py  remote_engine.py
phoenix-engine/python/src/: bind_engine.cpp  bind_indicators.cpp  main.cpp
phoenix-engine/python/strategies/: __init__.py  base.py  rsi_example.py  runner.py  runner_ipc.py
phoenix-engine/python/tests/: conftest.py  test_bindings.py  test_integration.py  test_ipc.py  test_remote_engine.py  test_strategy.py
phoenix-engine/scripts/: setup_hugepages.sh
phoenix-engine/src/: engine.cpp
phoenix-engine/src/core/: market_data.cpp  order.cpp  portfolio.cpp  risk_manager.cpp
phoenix-engine/src/examples/: main.cpp
phoenix-engine/src/execution/: simulated_gateway.cpp
phoenix-engine/src/feeds/: simulated_feed.cpp
phoenix-engine/src/indicators/: rsi.cpp
phoenix-engine/src/ipc/: CMakeLists.txt  client_session.cpp  ipc_server_main.cpp  json_message.cpp  tcp_server.cpp
phoenix-engine/src/utils/: logging.cpp  memory_pool.cpp
phoenix-engine/supabase/migrations/: 20250324_add_genetic_config.sql  20250324_add_strategy_absorption_tables.sql  20250324_add_trading_system_tables.sql  complete_schema_fix.sql
phoenix-engine/tests/: test_capnp_serialization.cpp  test_indicators.cpp  test_json_message.cpp  test_market_data.cpp  test_portfolio.cpp  test_queue.cpp  test_risk.cpp  test_tcp_server.cpp  test_zmq_helpers.cpp
phoenix-frontend/: .env.local.example  .firebaserc  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
phoenix-frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
phoenix-frontend/src/app/dashboard/: page.tsx
phoenix-frontend/src/app/portfolio/: page.tsx
phoenix-frontend/src/app/strategies/: page.tsx
phoenix-frontend/src/app/trading/: page.tsx
phoenix-frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
phoenix-frontend/src/components/common/: ErrorBoundary.tsx  NotificationBell.tsx  ThemeToggle.tsx
phoenix-frontend/src/components/layout/: Header.tsx
phoenix-frontend/src/components/providers/: QueryProvider.tsx
phoenix-frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Spinner.tsx  Table.tsx  Toast.tsx
phoenix-frontend/src/hooks/: useApiKeys.ts  useAuth.ts  useOrders.ts  usePortfolio.ts  useStrategies.ts  useWebSocket.ts
phoenix-frontend/src/lib/api/: admin.ts  auth.ts  client.ts  portfolio.ts  strategies.ts  trading.ts
phoenix-frontend/src/styles/: globals.css
phoenix-frontend/src/types/: api.ts  trading.ts  user.ts
phoenix-frontend/tests/components/: Button.test.tsx
phoenix-frontend/tests/hooks/: useAuthStore.test.tsx
supabase/.temp/: pooler-url  project-ref
supabase/functions/live-trader/: index-old.ts  index.ts
supabase/functions/strategy-absorber/: index.ts
(+12 files in other folders)
